remove image on tablet, fix padding

--- a/components/Academy/Introduction/Introduction.module.scss
+++ b/components/Academy/Introduction/Introduction.module.scss
@@ -7,18 +7,11 @@
     margin-bottom: -35px;
 
     @include media-query(medium) {
-        padding: 0 $grid * 2;
-        margin-bottom: -60px;
-    }
-
-    // Awkward extra breakpoint to not overlap next section title
-    @media only screen and (min-width: 730px) {
-        margin-bottom: -120px;
+        padding: 0 $grid * 3 $grid * 2 $grid * 3;
     }
 
     @include media-query(large) {
         flex-direction: row;
-        margin-bottom: -$grid;
         padding: 0 28px 0 48px;
     }
 
@@ -39,12 +32,13 @@
     position: relative;
 
     @include media-query(medium) {
-        width: 360px;
-        height: 360px;
-        margin: 0 0 0 auto;
+        display: none;
     }
 
     @include media-query(large) {
+        display: block;
+        width: 360px;
+        height: 360px;
         align-self: flex-end;
         margin-left: auto;
         margin-right: unset;
